--- a/app/templates/eventdetails.html
+++ b/app/templates/eventdetails.html
@@ -55,26 +55,13 @@
         </div>
         <ul class="list-unstyled">
             <li ng-repeat="session in event.sessions | orderBy:sortorder | limitTo:4 | filter:query" id="session{{session.duration}}">
-                <a href="#/session/{{session.id}}/{{session.duration}}"><div class="col-lg-2 votingWidget">
-                    <div class="btn btn-success votingButton" ng-click="voteUpSession(session)">
-                        <span class="glyphicon glyphicon-chevron-up"></span>
-                    </div>
-                    <div class="btn btn-success votingButton" ng-click="voteDownSession($index)">
-                        <span class="glyphicon glyphicon-chevron-down"></span>
-                    </div>
-                    <div class="badge badge-inverse">{{session.upVoteCount}}</div>
+                <div class="col-lg-2 votingWidget">
+                    <vote upvote-method="voteUpSession(session)" downvote-method="voteDownSession(session)" count-var="{{session.upVoteCount}}"></vote>
                 </div>
-                <div class="row session">
-                    <div class="well" ng-class-odd="myClass">
-                        <h4 class="well-title">{{session.name}}</h4>
-                        <h6>{{session.creatorName}}</h6>
-                        <span>Duration: {{session.duration | durations}}</span>
-                        <span>Level: {{session.level}}</span>
 
-                        <p>Abstract: {{session.abstract}}</p>
-                    </div>
-                </div></a>
+                <session-thumbnail data="session"></session-thumbnail>
             </li>
+
         </ul>
     </div>
 </div>
