--- a/app/templates/directives/vote.html
+++ b/app/templates/directives/vote.html
@@ -1,7 +1,7 @@
-<div class="btn btn-success votingButton" ng-click="upvoteMethod()">
+<div class="btn btn-success votingButton" ng-click="mupvote()">
     <span class="glyphicon glyphicon-chevron-up"></span>
 </div>
-<div class="btn btn-success votingButton" ng-click="downvoteMethod()">
+<div class="btn btn-success votingButton" ng-click="mdownvote()">
     <span class="glyphicon glyphicon-chevron-down"></span>
 </div>
-<div class="badge badge-inverse">{{countVar}}</div>
+<div class="badge badge-inverse">{{vcount}}</div>
