--- a/app/templates/eventdetails.html
+++ b/app/templates/eventdetails.html
@@ -1,7 +1,7 @@
 <div class="row">{{'hello'+' catty'}}</div>
 <div class="container">
-
-
+    <input type="text" ng-model="rtext"/>
+    <div repeat-x="5" text="{{rtext}}">{{rtext}}</div>
     <button type="button" class="btn btn-primary" ng-click="scrollToSession()">Scroll</button>
 
     <img ng-src="{{event.imgUrl}}" alt="{{event.name}}" class="col-lg-1"/>
@@ -58,7 +58,9 @@
                 <div class="col-lg-2 votingWidget">
                     <vote mupvote="voteUpSession(session)" mdownvote="voteDownSession(session)" vcount="{{session.upVoteCount}}"></vote>
                 </div>
+                <collaspsable title="{{session.title}}">
                 <session-thumbnail data="session"></session-thumbnail>
+                </collaspsable>
             </li>
 
         </ul>
